fix: backstack and kernel bug
add system theme support

bump deps

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ coreKtx = "1.13.1"
 datastorePreferences = "1.1.1"
 desugar_jdk_libs = "2.0.4"
 espressoCore = "3.6.1"
-hiltAndroid = "2.51.1"
+hiltAndroid = "2.52"
 hiltNavigationCompose = "1.2.0"
 junit = "4.13.2"
 kotlinx-serialization-json = "1.7.1"
@@ -22,9 +22,9 @@ pinLockCompose = "1.0.3"
 roomVersion = "2.6.1"
 timber = "5.0.1"
 tunnel = "1.2.1"
-androidGradlePlugin = "8.5.1"
-kotlin = "2.0.0"
-ksp = "2.0.0-1.0.24"
+androidGradlePlugin = "8.6.0-rc01"
+kotlin = "2.0.10"
+ksp = "2.0.10-1.0.24"
 composeBom = "2024.06.00"
 compose = "1.6.8"
 zxingAndroidEmbedded = "4.3.0"
