cd: optimize nightly
Add check to only run nightly if changes in the past 24 hours

--- a/.github/workflows/on-issue.yml
+++ b/.github/workflows/on-issue.yml
@@ -1,4 +1,4 @@
-name: Issue Updates Workflow
+name: on-issue
 
 on:
   issues:
@@ -7,8 +7,8 @@ on:
 
 jobs:
 
-  build:
-    name: Build
+  on-issue:
+    name: On new issue
     runs-on: ubuntu-latest
     steps:
       - name: Send Telegram Message
