feat: improve logs screen scroll
Add logs screen share

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,6 +98,16 @@
 			android:launchMode="singleInstance"
             android:theme="@android:style/Theme.NoDisplay" />
 
+		<provider
+			android:name="androidx.core.content.FileProvider"
+			android:authorities="@string/provider"
+			android:exported="false"
+			android:grantUriPermissions="true">
+			<meta-data
+				android:name="android.support.FILE_PROVIDER_PATHS"
+				android:resource="@xml/file_paths" />
+		</provider>
+
         <service
             android:name=".service.tile.TunnelControlTile"
             android:exported="true"
