--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: release-android
 
 on:
   schedule:
-  - cron: "*/10 * * * *"
+  - cron: "4 3 * * *"
   workflow_dispatch:
     inputs:
       track:
