add more ui changes, androidtv improvements

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,12 @@
     <uses-feature
         android:name="android.hardware.screen.portrait"
         android:required="false" />
+	<uses-feature
+		android:name="android.hardware.gamepad"
+		android:required="false"/>
+
+	<uses-feature android:name="android.hardware.wifi"
+		android:required="false"/>
 
     <queries>
         <intent>
