--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -166,6 +166,7 @@
 		<service
 			android:name=".service.foreground.TunnelBackgroundService"
 			android:exported="false"
+			android:persistent="true"
 			android:foregroundServiceType="systemExempted"
 			android:permission="android.permission.BIND_VPN_SERVICE">
 			<intent-filter>
