refactor: language selection
fix: amnezia edit bug
closes #425

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,9 @@
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.WireguardAutoTunnel">
+            android:theme="@style/Theme.WireguardAutoTunnel"
+			android:configChanges="orientation|screenSize|keyboardHidden"
+			>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
