--- a/.github/workflows/on-pr.yml
+++ b/.github/workflows/on-pr.yml
@@ -1,11 +1,11 @@
-name: ci-android
+name: on-pr
 
 on:
     workflow_dispatch:
     pull_request:
 
 jobs:
-  format:
+  format_check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
