Update Crowdin configuration file

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -2,4 +2,4 @@ files:
   - source: /fastlane/metadata/android/en-US/*.txt
     translation: /fastlane/metadata/android/%locale%/%original_file_name%
   - source: /app/src/main/res/values/strings.xml
-    translation: /app/src/main/res/values-%locale%/%original_file_name%
+    translation: /app/src/main/res/values-%android_code%/%original_file_name%
