--- a/crowdin.yml
+++ b/crowdin.yml
@@ -3,3 +3,26 @@ files:
     translation: /fastlane/metadata/android/%locale%/%original_file_name%
   - source: /app/src/main/res/values/strings.xml
     translation: /app/src/main/res/values-%android_code%/%original_file_name%
+    languages_mapping:
+        android_code:
+            ar: ar
+            de: de
+            es-ES: es
+            fr: fr
+            he: iw
+            hi: hi
+            hr: hr
+            id: in
+            it: it
+            ja: ja
+            nl: nl
+            pl: pl
+            pt-BR: pt-rBR
+            pt-PT: pt-rPT
+            ru: ru
+            sv-SE: sv
+            tr: tr
+            uk: uk
+            vi: vi
+            zh-CN: zh-rCN
+            zh-TW: zh-rTW
